--- a/FlowApp/packages.config
+++ b/FlowApp/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.ja" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="2.2.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
@@ -39,6 +40,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter.ja" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
