--- a/FlowApp/FlowApp.csproj
+++ b/FlowApp/FlowApp.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Article.cs" />
     <Compile Include="Models\DbInitializer.cs" />
+    <Compile Include="Models\ProposalDraftAction.cs" />
     <Compile Include="Models\ProposalDraft.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
