--- a/FlowApp/FlowApp.csproj
+++ b/FlowApp/FlowApp.csproj
@@ -186,6 +186,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\ProposalCurrentAction.cs" />
     <Compile Include="Models\DbInitializer.cs" />
     <Compile Include="Models\ModelExtensions.cs" />
     <Compile Include="Models\ProposalDraftAction.cs" />
