--- a/FlowApp/FlowApp.csproj
+++ b/FlowApp/FlowApp.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Models\Proposal.cs" />
     <Compile Include="Models\ProposalService.cs" />
     <Compile Include="Models\ProposalViewModel.cs" />
+    <Compile Include="Models\UserVIewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -224,6 +225,8 @@
     <Content Include="Views\Proposals\Details.cshtml" />
     <Content Include="Views\Proposals\Edit.cshtml" />
     <Content Include="Views\Proposals\Index.cshtml" />
+    <None Include="Views\Proposals\Drafts.cshtml" />
+    <Content Include="Views\Proposals\_Drafts.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
