--- a/FlowApp/FlowApp.csproj
+++ b/FlowApp/FlowApp.csproj
@@ -226,7 +226,10 @@
     <Content Include="Views\Proposals\Edit.cshtml" />
     <Content Include="Views\Proposals\Index.cshtml" />
     <None Include="Views\Proposals\Drafts.cshtml" />
-    <Content Include="Views\Proposals\_Drafts.cshtml" />
+    <Content Include="Views\Proposals\_Proposals.cshtml" />
+    <None Include="Views\Proposals\Showns.cshtml" />
+    <None Include="Views\Proposals\Waitings.cshtml" />
+    <Content Include="Views\Proposals\_ButtonGroup.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
