--- a/FlowApp/FlowApp.csproj
+++ b/FlowApp/FlowApp.csproj
@@ -232,6 +232,7 @@
     <None Include="Views\Proposals\Publishes.cshtml" />
     <None Include="Views\Proposals\Pendings.cshtml" />
     <Content Include="Views\Proposals\_ButtonGroup.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\User.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
